--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -4,12 +4,6 @@
     android:layout_height="match_parent"
     tools:context="com.aaxs.nitrov17.project_ida_prototype_beta.TwoFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/one"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+    <include layout="@layout/content_main" />
 
 </RelativeLayout>
