--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -11,7 +11,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         app:cardElevation="@dimen/card_elevation"
-        app:cardCornerRadius="@dimen/card_album_radius">
+        app:cardCornerRadius="@dimen/card_album_radius"
+        android:onClick="positionActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
